Fix top alignment

--- a/app/css/style-desktop.css
+++ b/app/css/style-desktop.css
@@ -31,6 +31,11 @@
 	{
 		padding: 1em 0 0;
 	}
+
+	#header-wrapper-gradient
+	{
+		padding: 1em 0 0;
+	}
 	
 	#banner-wrapper
 	{
